works no replica
