# nginx/static/swagger/swagger.json
@@ -98,7 +98,7 @@
                 }
             }
         },
-        "/categories": {
+        "/craftplace/categories": {
             "get": {
                 "description": "Возвращает список категорий с возможностью фильтрации",
                 "consumes": [
@@ -158,7 +158,7 @@
                 }
             }
         },
-        "/categories/{id_category}": {
+        "/craftplace/categories/{id_category}": {
             "get": {
                 "description": "Возвращает информацию о категории по её идентификатору",
                 "consumes": [
@@ -209,7 +209,7 @@
                 }
             }
         },
-        "/posts": {
+        "/craftplace/posts": {
             "get": {
                 "description": "Возвращает список постов с возможностью фильтрации по магазину",
                 "consumes": [
@@ -271,7 +271,7 @@
                 }
             }
         },
-        "/products": {
+        "/craftplace/products": {
             "get": {
                 "description": "Возвращает список товаров с возможностью фильтрации по различным параметрам",
                 "consumes": [
@@ -361,7 +361,7 @@
                 }
             }
         },
-        "/shops": {
+        "/craftplace/shops": {
             "get": {
                 "description": "Возвращает список магазинов с возможностью фильтрации",
                 "consumes": [
@@ -427,7 +427,60 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/craftplace/shops/{id_shop}": {
+            "get": {
+                "description": "Возвращает информацию о магазине по его идентификатору",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Поиск"
+                ],
+                "summary": "Получить магазин по ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "ID магазина",
+                        "name": "id_shop",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Информация о магазине",
+                        "schema": {
+                            "$ref": "#/definitions/reqresp.ShopResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный формат ID магазина",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Магазин не найден",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/shops": {
             "post": {
                 "security": [
                     {
@@ -489,55 +542,6 @@
             }
         },
         "/shops/{id_shop}": {
-            "get": {
-                "description": "Возвращает информацию о магазине по его идентификатору",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Поиск"
-                ],
-                "summary": "Получить магазин по ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "ID магазина",
-                        "name": "id_shop",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Информация о магазине",
-                        "schema": {
-                            "$ref": "#/definitions/reqresp.ShopResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Неверный формат ID магазина",
-                        "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Магазин не найден",
-                        "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
-                        "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
-                        }
-                    }
-                }
-            },
             "put": {
                 "security": [
                     {
